# mailru-im-command-bot

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: full_feature_example.py  hello_world.py
mailru_im_command_bot/: __init__.py  command_bot.py  types.py
tests/: tests.py
